tests/skip/duplicate-attr.stderr
error: encountered duplicate `#[skip]` attribute for field
 --> $DIR/duplicate-attr.rs:5:15
  |
5 |     #[skip] #[skip]
  |               ^^^^

error: duplicate `#[skip]` here
 --> $DIR/duplicate-attr.rs:5:7
  |
5 |     #[skip] #[skip]
  |       ^^^^
